--- a/index.html
+++ b/index.html
@@ -7,12 +7,7 @@
     <link href="css/index_css/index.css" rel="stylesheet"/>
     <!--<base target="_blank"/>
     -->
-    <!--[if IE 6]>
-    <script src="js/DD_belatedPNG_0.0.8a.js"></script>
-    <script>
-        DD_belatedPNG.fix('body img,#logo,.box .bj');
-    </script>
-    <![endif]-->
+
 
     <script src="js/index_js/move.js"></script>
     <script src="js/index_js/timemove.js"></script>
@@ -55,8 +50,7 @@
             </ul>
         </div>
         <div id="link">
-            <a href="https://www.facebook.com/agence.Kalixo" target="_blank" class="facebook"><img src="img/index_img/btn_facebook.png"/></a>
-            <a href="https://twitter.com/agencekalixo"  target="_blank" class="twitter"><img src="img/index_img/btn_twitter.png"/></a>
+            <a href="https://github.com/deng565430" target="_blank" class="github"><img src="img/index_img/btn_github.png"/></a>
         </div>
     </div>
 </div>
