--- a/index.html
+++ b/index.html
@@ -154,15 +154,8 @@
             <img src="img/index_img/logo2.png"/>
         </div>
         <div class="txtCon">
-            <p><strong>掌握技能：</strong></p>
-            <p>1、熟练DIV和CSS页面结构布局，熟悉HTTP协议并具有良好的编码规范；</p>
-            <p>2、熟练使用HTML5、CSS3、JavaScript等静态页面技术；</p>
-            <p>3、熟练使用PS等作图工具，有一定的美术功底。能模仿制作较为精美的网页；</p>
-            <p>4、熟练使用less CSS预编译语言，了解使用sass；</p>
-            <p>5、掌握前端Jquery和Bootstrap前端基础库搭建响应式网页；</p>
-            <p>6、能够解决不同主流浏览器的兼容性问题；</p>
-            <p>7、能够解决不同主流浏览器的兼容性问题；</p>
-            <p>8、解网页中SEO的一些基本理念。</p>
+            <p><strong>寄语：</strong></p>
+            <p>学习前端最前沿的知识！</p>
         </div>
         <div class="icon">
             <div class="icon1">
@@ -221,13 +214,9 @@
             <img src="img/index_img/logo3.png"/>
         </div>
         <div class="txtCon">
-            <p>9、掌握服务器语言Node.js，对其核心组件path，express，body-parser，mongose熟练应用；</p>
-            <p>10、熟悉Php语言，能操作基本的Php+mySQL或Node+MongoDB，与后台进行交互；</p>
-            <p>11、熟悉Npm命令行工具及包管理工具；</p>
-            <p>12、了解使用Jade  Pug  HTML模板引擎；</p>
-            <p>13、能开发微信小程序；</p>
-            <p>14、了解使用gulp前端自动化打包工具；</p>
-            <p>15、了解使用React  Vue等框架。</p>
+            <p><strong>寄语：</strong></p>
+            <p>成长必须得靠努力来完成</p>
+            <p>生命不息，奋斗不止</p>
         </div>
         <div class="icon">
             <div class="icon1">
@@ -326,35 +315,35 @@
             </li>
             <li>
                 <div class="bjcor"></div>
-                <a href="" title=""><img src="img/index_img/nos_logo2.png"/></a>
+                <a href="https://github.com/deng565430/zhongchengkeji.git" title=""><img src="img/index_img/nos_logo2.png"/></a>
             </li>
             <li>
                 <div class="bjcor"></div>
-                <a href="" title=""><img src="img/index_img/nos_logo3.png"/></a>
+                <a href="https://github.com/deng565430/moveapp.git" title=""><img src="img/index_img/nos_logo3.png"/></a>
             </li>
             <li>
                 <div class="bjcor"></div>
-                <a href="" title=""><img src="img/index_img/nos_logo4.png"/></a>
+                <a href="https://github.com/deng565430/-.git" title=""><img src="img/index_img/nos_logo4.png"/></a>
             </li>
             <li>
                 <div class="bjcor"></div>
-                <a href="" title=""><img src="img/index_img/nos_logo5.png"/></a>
+                <a href="" title="待续。。。"><img src="img/index_img/nos_logo5.png"/></a>
             </li>
             <li>
                 <div class="bjcor"></div>
-                <a href="" title=""><img src="img/index_img/nos_logo6.png"/></a>
+                <a href="" title="待续。。。"><img src="img/index_img/nos_logo6.png"/></a>
             </li>
             <li>
                 <div class="bjcor"></div>
-                <a href="" title=""><img src="img/index_img/nos_logo7.png"/></a>
+                <a href="" title="待续。。。"><img src="img/index_img/nos_logo7.png"/></a>
             </li>
             <li>
                 <div class="bjcor"></div>
-                <a href="" title=""><img src="img/index_img/nos_logo8.png"/></a>
+                <a href="" title="待续。。。"><img src="img/index_img/nos_logo8.png"/></a>
             </li>
             <li>
                 <div class="bjcor"></div>
-                <a href="" title=""><img src="img/index_img/nos_logo9.png"/></a>
+                <a href="" title="待续。。。"><img src="img/index_img/nos_logo9.png"/></a>
             </li>
             <li>
                 <div class="bjcor"></div>
@@ -362,11 +351,11 @@
             </li>
             <li>
                 <div class="bjcor"></div>
-                <a href="" title=""><img src="img/index_img/nos_logo11.png"/></a>
+                <a href="" title="待续。。。"><img src="img/index_img/nos_logo11.png"/></a>
             </li>
             <li>
                 <div class="bjcor"></div>
-                <a href="" title=""><img src="img/index_img/nos_logo12.png"/></a>
+                <a href="" title="待续。。。"><img src="img/index_img/nos_logo12.png"/></a>
             </li>
             <li>
                 <div class="bjcor"></div>
@@ -401,9 +390,6 @@
 <div class="box" id="box6">
     <div class="contact clear">
         <h4>联系我/Contact Me</h4>
-        <div class="map">
-            <iframe width="520" height="510" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="http://l.soso.com/1965737215"></iframe>
-        </div>
         <div class="info">
             <h5>个人信息/Personal Information</h5>
             <div class="inrCon">
@@ -412,8 +398,8 @@
                 <p><span>Q &nbsp; Q： 562340148</span></p>
                 <p><span>邮箱： 562340148@qq.com</span></p>
                 <p><span>地址：上海市杨浦区</span></p>
-                <p><span>如果您对我感兴趣的话，可以下载我的个人简历哦！</span></p>
-                <div class="resume"><a href="" title="点击下载我的简历">Download resume</a></div>
+            <!--    <p><span>如果您对我感兴趣的话，可以下载我的个人简历哦！</span></p>
+                <div class="resume"><a href="" title="点击下载我的简历">Download resume</a></div>-->
             </div>
         </div>
     </div>
@@ -437,10 +423,10 @@
             <p>邮箱： 562340148@qq.com</p>
         </div>
         <div class="line"></div>
-        <div class="rightF">
+     <!--   <div class="rightF">
             <p>如果您对我感兴趣的话，可以下载我的个人简历哦！</p>
             <div class="resume"><a href="" title="点击下载我的简历">Download resume</a></div>
-        </div>
+        </div>-->
     </div>
 </div>
 </body>
