修改导航字体点击颜色

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>个人网站</title>
+    <title>邓胜辉的网站</title>
     <link rel="shortcut icon" href="img/index_img/favicon.ico" />
     <link href="css/index_css/index.css" rel="stylesheet"/>
     <!--<base target="_blank"/>
@@ -26,27 +26,27 @@
             <ul id="bjList">
                 <li class="active">
                     <div class="bjcor1"><img src="img/index_img/agence.png" class="bjCor"/></div>
-                    <a href="javascript:;" class="cor1">首 页</a>
+                    <a href="javascript:;" class="cor1 liA">首 页</a>
                 </li>
                 <li>
                     <div class="bjcor2"><img src="img/index_img/strategie.png" class="bjCor"/></div>
-                    <a href="javascript:;" class="cor2">H5/C3实例</a>
+                    <a href="javascript:;" class="cor2 liA">H5/C3实例</a>
                 </li>
                 <li>
                     <div class="bjcor3"><img src="img/index_img/design.png" class="bjCor"/></div>
-                    <a href="javascript:;" class="cor3">Js实例</a>
+                    <a href="javascript:;" class="cor3 liA">Js实例</a>
                 </li>
                 <li>
                     <div class="bjcor4"><img src="img/index_img/techno.png" class="bjCor"/></div>
-                    <a href="javascript:;" class="cor4">个人简介</a>
+                    <a href="javascript:;" class="cor4 liA">个人简介</a>
                 </li>
                 <li>
                     <div class="bjcor5"><img src="img/index_img/reference.png" class="bjCor"/></div>
-                    <a href="javascript:;" class="cor5">作品集</a>
+                    <a href="javascript:;" class="cor5 liA">作品集</a>
                 </li>
                 <li>
                     <div class="bjcor6"><img src="img/index_img/contact.png" class="bjCor"/></div>
-                    <a href="javascript:;" class="cor6">联系我</a>
+                    <a href="javascript:;" class="cor6 liA">联系我</a>
                 </li>
             </ul>
         </div>
@@ -405,7 +405,7 @@
     </div>
 
 </div>
-<div id="footer">
+<footer id="footer">
     <div class="upIcon">
         <img src="img/index_img/info.png"/>
     </div>
@@ -428,6 +428,6 @@
             <div class="resume"><a href="" title="点击下载我的简历">Download resume</a></div>
         </div>-->
     </div>
-</div>
+</footer>
 </body>
 </html>
