--- a/index.html
+++ b/index.html
@@ -179,21 +179,20 @@
     <div class="infoShow jsShili">
         <h1>JS实例</h1>
         <ul>
-            <li><a href="jsShili/shilisuoying/shilisuoying.html"><img src="img/index_img/domCaozuo.jpg" alt="拼图游戏"/></a></li>
-            <li><a href="jsShili/bingzhuangtu/bingzhuangtu.html"><img src="img/index_img/bingzhuangtu.png" alt="canvas饼状图"/></a></li>
-            <li><a href="jsShili/zhuzhuangtu/zhuzhuangtu.html"><img src="img/index_img/zhuzhuangtu.png" alt="canvas柱状图"/></a></li>
-            <li><a href="jsShili/pingtu/game_pintu.html" title="拼图游戏"><img src="img/index_img/pingtu.jpg" alt="拼图游戏"/></a></li>
-            <li><a href="jsShili/jiejinbiyouxi/games_pickUpGold.html" title="接金币游戏"><img src="img/index_img/jeijingbi.jpg" alt="接金币游戏"/></a></li>
-            <li><a href="jsShili/damifengyouxi/game_mifeng.html" title="打小蜜蜂游戏"><img src="img/index_img/daxiaomifeng.jpg" alt="打小蜜蜂游戏"/></a></li>
-            <li><a href="jsShili/tupianlunhuan/pic_tab.html" title="淡雅图片展示"><img src="img/index_img/danya.jpg" alt="淡雅图片展示"/></a></li>
-            <li><a href="jsShili/pingtu/JDfangdajing.html" title="京东商品放大镜效果"><img src="img/index_img/JDfangdajing.jpg" alt="京东商品放大镜效果"/></a></li>
-            <li><a href="jsShili/zhaopianqiang/Photo wall.html" title="照片墙"><img src="img/index_img/zhaopianqiang.jpg" alt="照片墙"/></a></li>
+            <li><a href="jsShili/shilisuoying/shilisuoying.html"><img src="img/index_img/domCaozuo.jpg" alt="Demo实例"/>Demo实例</a></li>
+            <li><a href="jsShili/bingzhuangtu/bingzhuangtu.html"><img src="img/index_img/bingzhuangtu.png" alt="canvas饼状图"/>canvas饼状图</a></li>
+            <li><a href="jsShili/zhuzhuangtu/zhuzhuangtu.html"><img src="img/index_img/zhuzhuangtu.png" alt="canvas柱状图"/>canvas柱状图</a></li>
+            <li><a href="jsShili/pingtu/game_pintu.html" title="拼图游戏"><img src="img/index_img/pingtu.jpg" alt="拼图游戏"/>拼图游戏</a></li>
+            <li><a href="jsShili/jiejinbiyouxi/games_pickUpGold.html" title="接金币游戏"><img src="img/index_img/jeijingbi.jpg" alt="接金币游戏"/>接金币游戏</a></li>
+            <li><a href="jsShili/damifengyouxi/game_mifeng.html" title="打小蜜蜂游戏"><img src="img/index_img/daxiaomifeng.jpg" alt="打小蜜蜂游戏"/>打小蜜蜂游戏</a></li>
+            <li><a href="jsShili/tupianlunhuan/pic_tab.html" title="淡雅图片展示"><img src="img/index_img/danya.jpg" alt="淡雅图片展示"/>淡雅图片展示</a></li>
+            <li><a href="jsShili/pingtu/JDfangdajing.html" title="京东商品放大镜效果"><img src="img/index_img/JDfangdajing.jpg" alt="京东商品放大镜效果"/>京东商品放大镜效果</a></li>
+            <li><a href="jsShili/zhaopianqiang/Photo wall.html" title="照片墙"><img src="img/index_img/zhaopianqiang.jpg" alt="照片墙"/>照片墙</a></li>
         </ul>
     </div>
 
     <div class="rightbox">
         <div class="leftIcon">
-            <!--DOM生成-->
             <img src="img/index_img/Arrow.png" class="before"/>
             <img src="img/index_img/Arrow_violet.png" class="after"/>
         </div>
