修改文件路径

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>邓胜辉的网站</title>
+    <title>web前端开发工程师邓胜辉的个人网站</title>
     <link rel="shortcut icon" href="img/index_img/favicon.ico" />
     <link href="css/index_css/index.css" rel="stylesheet"/>
     <!--<base target="_blank"/>
