--- a/jsShili/damifengyouxi/game_mifeng.html
+++ b/jsShili/damifengyouxi/game_mifeng.html
@@ -11,11 +11,11 @@
 
         #score{ color:#FFFFFF; font-size:20px;}
         #bee{ position:relative;}
-        .enemy1{ width:40px; height:28px; background: url(../img/game_mifeng_img/mf1.png) no-repeat; float:left;}
-        .enemy2{ width:40px; height:28px; background:url(../img/game_mifeng_img/mf2.png) no-repeat; float:left;}
-        .enemy3{ width:40px; height:28px; background:url(../img/game_mifeng_img/mf3.png) no-repeat; float:left;}
+        .enemy1{ width:40px; height:28px; background: url(../../img/game_mifeng_img/mf1.png) no-repeat; float:left;}
+        .enemy2{ width:40px; height:28px; background:url(../../img/game_mifeng_img/mf2.png) no-repeat; float:left;}
+        .enemy3{ width:40px; height:28px; background:url(../../img/game_mifeng_img/mf3.png) no-repeat; float:left;}
 
-        .air1{ width:46px; height:60px; background:url(../img/game_mifeng_img/fj.png) no-repeat; position:absolute;}
+        .air1{ width:46px; height:60px; background:url(../../img/game_mifeng_img/fj.png) no-repeat; position:absolute;}
         .bullet{ width:1px; overflow:hidden; height:10px; background:white; position:absolute;}
     </style>
     <script>
