--- a/jsShili/pingtu/JDfangdajing.html
+++ b/jsShili/pingtu/JDfangdajing.html
@@ -53,8 +53,8 @@
                     }
                 }
                 aLi[i].onclick = function(){
-                    aImg.src = '../img/game_pintu_img/c' + (this.index +1) + '.jpg';
-                    abImg.src = '../img/game_pintu_img/b' + (this.index +1) + '.jpg';
+                    aImg.src = '../../img/game_pintu_img/c' + (this.index +1) + '.jpg';
+                    abImg.src = '../../img/game_pintu_img/b' + (this.index +1) + '.jpg';
                     for(var i =0; i<aLi.length; i++){
                         aLi[i].className = '';
                         aLi[i].onOff = true;
@@ -126,7 +126,7 @@
 <div id="box">
     <div id="imgTab">
         <div id="cImg">
-            <img src="../img/game_pintu_img/c1.jpg"/>
+            <img src="../../img/game_pintu_img/c1.jpg"/>
             <span></span>
             <div id="mask"></div>
         </div>
@@ -134,23 +134,23 @@
             <div id="prev"><</div>
             <div id="sImgList">
                 <ul id="sImg">
-                    <li class="hover"><img src="../img/game_pintu_img/s1.jpg"/></li>
-                    <li><img src="../img/game_pintu_img/s2.jpg"/></li>
-                    <li><img src="../img/game_pintu_img/s3.jpg"/></li>
-                    <li><img src="../img/game_pintu_img/s4.jpg"/></li>
-                    <li><img src="../img/game_pintu_img/s5.jpg"/></li>
-                    <li><img src="../img/game_pintu_img/s6.jpg"/></li>
-                    <li><img src="../img/game_pintu_img/s7.jpg"/></li>
-                    <li><img src="../img/game_pintu_img/s8.jpg"/></li>
-                    <li><img src="../img/game_pintu_img/s9.jpg"/></li>
-                    <li><img src="../img/game_pintu_img/s10.jpg"/></li>
+                    <li class="hover"><img src="../../img/game_pintu_img/s1.jpg"/></li>
+                    <li><img src="../../img/game_pintu_img/s2.jpg"/></li>
+                    <li><img src="../../img/game_pintu_img/s3.jpg"/></li>
+                    <li><img src="../../img/game_pintu_img/s4.jpg"/></li>
+                    <li><img src="../../img/game_pintu_img/s5.jpg"/></li>
+                    <li><img src="../../img/game_pintu_img/s6.jpg"/></li>
+                    <li><img src="../../img/game_pintu_img/s7.jpg"/></li>
+                    <li><img src="../../img/game_pintu_img/s8.jpg"/></li>
+                    <li><img src="../../img/game_pintu_img/s9.jpg"/></li>
+                    <li><img src="../../img/game_pintu_img/s10.jpg"/></li>
                 </ul>
             </div>
             <div id="next">></div>
         </div>
     </div>
     <div id="bImg">
-        <img src="../img/game_pintu_img/b1.jpg"/>
+        <img src="../../img/game_pintu_img/b1.jpg"/>
     </div>
 
 </div>
