--- a/jsShili/tupianlunhuan/pic_tab.html
+++ b/jsShili/tupianlunhuan/pic_tab.html
@@ -6,7 +6,7 @@
     <style>
         *{ margin:0; padding:0; list-style:none;}
         body{ background:#666; min-width:1280px; width:100%}
-        #show{ width:0; height:0;padding:5px; background: #fff url(../img/picTab_img/loading.gif) no-repeat center center; position:absolute; left:0; top:0;}
+        #show{ width:0; height:0;padding:5px; background: #fff url(../../img/picTab_img/loading.gif) no-repeat center center; position:absolute; left:0; top:0;}
         img{ vertical-align:top;}
         #nav{ width:100%; height:0px; background:#000; position:fixed; left:0; bottom:0; padding: 5px 0;}
         #box{ width:357px; height:50px; overflow:hidden; position:absolute; left:462px; display:none;}
@@ -115,7 +115,7 @@
                         startMove(aSimg[that.index],{opacity:100});
 
                         aImg.src = '';
-                        yImg.src = '../img/picTab_img/' + (that.index + 1) + '.jpg';
+                        yImg.src = '../../img/picTab_img/' + (that.index + 1) + '.jpg';
 
 
                         yImg.onload = function(){
@@ -196,21 +196,21 @@
 </head>
 
 <body>
-<div id="show"><img src="../img/picTab_img/1.jpg" id="img"/></div>
+<div id="show"><img src="../../img/picTab_img/1.jpg" id="img"/></div>
 <div id="nav">
     <div id="box">
         <div id="bor"></div>
         <ul>
-            <li><img src="../img/picTab_img/s1.jpg" class="active"/></li>
-            <li><img src="../img/picTab_img/s2.jpg"/></li>
-            <li><img src="../img/picTab_img/s3.jpg"/></li>
-            <li><img src="../img/picTab_img/s4.jpg"/></li>
-            <li><img src="../img/picTab_img/s5.jpg"/></li>
-            <li><img src="../img/picTab_img/s6.jpg"/></li>
-            <li><img src="../img/picTab_img/s7.jpg"/></li>
-            <li><img src="../img/picTab_img/s8.jpg"/></li>
-            <li><img src="../img/picTab_img/s9.jpg"/></li>
-            <li><img src="../img/picTab_img/s10.jpg"/></li>
+            <li><img src="../../img/picTab_img/s1.jpg" class="active"/></li>
+            <li><img src="../../img/picTab_img/s2.jpg"/></li>
+            <li><img src="../../img/picTab_img/s3.jpg"/></li>
+            <li><img src="../../img/picTab_img/s4.jpg"/></li>
+            <li><img src="../../img/picTab_img/s5.jpg"/></li>
+            <li><img src="../../img/picTab_img/s6.jpg"/></li>
+            <li><img src="../../img/picTab_img/s7.jpg"/></li>
+            <li><img src="../../img/picTab_img/s8.jpg"/></li>
+            <li><img src="../../img/picTab_img/s9.jpg"/></li>
+            <li><img src="../../img/picTab_img/s10.jpg"/></li>
         </ul>
     </div>
 </div>
