--- a/jsShili/zhaopianqiang/Photo wall.html
+++ b/jsShili/zhaopianqiang/Photo wall.html
@@ -8,7 +8,7 @@
         #ul1{ width:660px; position:relative; margin:10px auto;}
         li{ width:200px; height:150px; margin:10px; float:left; list-style:none;}
     </style>
-    <script src="../js/index_js/move.js"></script>
+    <script src="../../js/index_js/move.js"></script>
     <script>
 
         window.onload = function(){
@@ -150,15 +150,15 @@
 
 <body>
 <ul id="ul1">
-    <li><img src="../img/photo/1.jpg" /></li>
-    <li><img src="../img/photo/2.jpg" /></li>
-    <li><img src="../img/photo/3.jpg" /></li>
-    <li><img src="../img/photo/4.jpg" /></li>
-    <li><img src="../img/photo/5.jpg" /></li>
-    <li><img src="../img/photo/1.jpg" /></li>
-    <li><img src="../img/photo/2.jpg" /></li>
-    <li><img src="../img/photo/3.jpg" /></li>
-    <li><img src="../img/photo/4.jpg" /></li>
+    <li><img src="../../img/photo/1.jpg" /></li>
+    <li><img src="../../img/photo/2.jpg" /></li>
+    <li><img src="../../img/photo/3.jpg" /></li>
+    <li><img src="../../img/photo/4.jpg" /></li>
+    <li><img src="../../img/photo/5.jpg" /></li>
+    <li><img src="../../img/photo/1.jpg" /></li>
+    <li><img src="../../img/photo/2.jpg" /></li>
+    <li><img src="../../img/photo/3.jpg" /></li>
+    <li><img src="../../img/photo/4.jpg" /></li>
 </ul>
 </body>
 </html>
