--- a/jsShili/jiejinbiyouxi/games_pickUpGold.html
+++ b/jsShili/jiejinbiyouxi/games_pickUpGold.html
@@ -7,28 +7,28 @@
         body,ul,p{ margin:0; padding:0; }
         body{background: #cee9f2;}
         li{ list-style:none;}
-        #box{ width:1263px; height:700px; background: url(../img/games_pickUpGold_img/box_bj.jpg) no-repeat; position:relative; margin: 0 auto; border:2px solid #000;}
-        span{ width:118px; height:166px; background:url(../img/games_pickUpGold_img/right.gif) no-repeat; position:absolute; left:0; top:435px;}
-        .active{ background:url(../img/games_pickUpGold_img/left.gif) no-repeat;}
+        #box{ width:1263px; height:700px; background: url(../../img/games_pickUpGold_img/box_bj.jpg) no-repeat; position:relative; margin: 0 auto; border:2px solid #000;}
+        span{ width:118px; height:166px; background:url(../../img/games_pickUpGold_img/right.gif) no-repeat; position:absolute; left:0; top:435px;}
+        .active{ background:url(../../img/games_pickUpGold_img/left.gif) no-repeat;}
         #btop{ height:40px; background:none; padding: 0 20px; position:relative; left:0; top:-20px; display:none;}
         #btop div{ width:40px; height:40px; position: absolute;}
-        .coin{ background:url(../img/games_pickUpGold_img/coin-8.gif) no-repeat;}
-        .addTime{ background:url(../img/games_pickUpGold_img/time.gif) no-repeat;}
-        .addcoin{ background:url(../img/games_pickUpGold_img/add.gif) no-repeat;}
-        .zhadan{ background:url(../img/games_pickUpGold_img/bomb.gif) no-repeat;}
-        #brand{ width:182px; height:68px; background:url(../img/games_pickUpGold_img/timebj.gif) no-repeat; padding: 175px 100px 68px 110px; margin-top:240px; display:none;}
+        .coin{ background:url(../../img/games_pickUpGold_img/coin-8.gif) no-repeat;}
+        .addTime{ background:url(../../img/games_pickUpGold_img/time.gif) no-repeat;}
+        .addcoin{ background:url(../../img/games_pickUpGold_img/add.gif) no-repeat;}
+        .zhadan{ background:url(../../img/games_pickUpGold_img/bomb.gif) no-repeat;}
+        #brand{ width:182px; height:68px; background:url(../../img/games_pickUpGold_img/timebj.gif) no-repeat; padding: 175px 100px 68px 110px; margin-top:240px; display:none;}
         #time,p{ height:34px; line-height:34px; display:block; font-size:20px; font-weight:bold; color:#FF0099;}
 
         #mask{ width:100%; height:100%; background:#000; opacity:0.8; position:absolute; z-index:5;}
-        #begin{ width:719px; height:545px; background:url(../img/games_pickUpGold_img/begin.gif) no-repeat; position:absolute; z-index:6; }
-        #login{ width: 123px; height:37px; position:absolute; left: 208px; top:422px; background:url(../img/games_pickUpGold_img/play.gif) no-repeat;}
-        #more{ width: 123px; height:37px; position:absolute; left:358px;top:422px; background:url(../img/games_pickUpGold_img/moreGames.gif) no-repeat;}
-        #over{ width:450px; height:252px; background:url(../img/games_pickUpGold_img/over.gif) no-repeat; z-index:6; position:absolute;display:none;}
+        #begin{ width:719px; height:545px; background:url(../../img/games_pickUpGold_img/begin.gif) no-repeat; position:absolute; z-index:6; }
+        #login{ width: 123px; height:37px; position:absolute; left: 208px; top:422px; background:url(../../img/games_pickUpGold_img/play.gif) no-repeat;}
+        #more{ width: 123px; height:37px; position:absolute; left:358px;top:422px; background:url(../../img/games_pickUpGold_img/moreGames.gif) no-repeat;}
+        #over{ width:450px; height:252px; background:url(../../img/games_pickUpGold_img/over.gif) no-repeat; z-index:6; position:absolute;display:none;}
         #overScore{ width:112px; height:34px; line-height:34px; font-size:30px; text-align:center; font-weight:bold; color:#5e05f5; position:absolute; left:170px; top:122px;}
-        #onemore{ width: 123px; height:37px; position:absolute; left:110px; top:207px; background:url(../img/games_pickUpGold_img/onemore.gif) no-repeat;}
-        .more{ width: 123px; height:37px; position:absolute; left:236px; top:207px; background:url(../img/games_pickUpGold_img/more1.gif) no-repeat;}
+        #onemore{ width: 123px; height:37px; position:absolute; left:110px; top:207px; background:url(../../img/games_pickUpGold_img/onemore.gif) no-repeat;}
+        .more{ width: 123px; height:37px; position:absolute; left:236px; top:207px; background:url(../../img/games_pickUpGold_img/more1.gif) no-repeat;}
         #win{ width:300px; height:34px; line-height:34px; font-size:26px; text-align:center; font-weight:bold; color:#FF0099; position:absolute; left:100px; top:156px;}
-        #btop .aScore{ width:50px; height:24px; background:url(../img/games_pickUpGold_img/score.gif) no-repeat; position: absolute; left:0; top:0;}
+        #btop .aScore{ width:50px; height:24px; background:url(../../img/games_pickUpGold_img/score.gif) no-repeat; position: absolute; left:0; top:0;}
         body,td,th {
             font-size: 16px;
         }
