--- a/index.html
+++ b/index.html
@@ -273,7 +273,7 @@
             <p>工作经验：</p>
             <p>2012.5-2013.8</p>
             <p>公司：深圳企业文化广告设计有限公司</p>
-            <p>职位：业务兼设计</p>
+            <p>职位：设计</p>
             <br/>
             <p>2015.9-2016.12</p>
             <p>公司：江西易企传媒有限公司</p>
@@ -396,7 +396,7 @@
                 <p><span>电话： 17051007953</span></p>
                 <p><span>Q &nbsp; Q： 562340148</span></p>
                 <p><span>邮箱： 562340148@qq.com</span></p>
-                <p><span>地址：上海市杨浦区</span></p>
+                <p><span>地址：上海市虹口区</span></p>
             <!--    <p><span>如果您对我感兴趣的话，可以下载我的个人简历哦！</span></p>
                 <div class="resume"><a href="" title="点击下载我的简历">Download resume</a></div>-->
             </div>
@@ -412,7 +412,7 @@
         <h2>个人信息/Personal Information</h2>
         <div class="leftF">
             <p>地址：</p>
-            <p>上海市杨浦区</p>
+            <p>上海市虹口区</p>
         </div>
         <div class="line"></div>
         <div class="centerF">
