--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <ul id="bjList">
                 <li class="active">
                     <div class="bjcor1"><img src="img/index_img/agence.png" class="bjCor"/></div>
-                    <a href="javascript:;" class="cor1 liA">首 页</a>
+                    <a href="javascript:;" class="cor1 liA">简 介</a>
                 </li>
                 <li>
                     <div class="bjcor2"><img src="img/index_img/strategie.png" class="bjCor"/></div>
@@ -38,7 +38,7 @@
                 </li>
                 <li>
                     <div class="bjcor4"><img src="img/index_img/techno.png" class="bjCor"/></div>
-                    <a href="javascript:;" class="cor4 liA">个人简介</a>
+                    <a href="javascript:;" class="cor4 liA">个人技能</a>
                 </li>
                 <li>
                     <div class="bjcor5"><img src="img/index_img/reference.png" class="bjCor"/></div>
